--- a/online-password-generator.dalenryder.com/encrypt.html
+++ b/online-password-generator.dalenryder.com/encrypt.html
@@ -367,6 +367,7 @@
   })();
 </script>
 <!-- End Matomo Code -->
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "6ccc9d54d0b548e5849bce4f29918486"}'></script><!-- End Cloudflare Web Analytics -->
 
 
 		
